--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body class="min-h-[500vh]">
     <header class="bg-white w-full sticky top-0 left-0 z-50">
-        <nav class="h-[127px] border headerContainer flex justify-between items-center">
+        <nav class="h-[127px] headerContainer flex justify-between items-center">
             <!-- Logo  -->
             <a href="#">
             <div class="flex gap-1.5 items-center">
@@ -47,21 +47,21 @@
         <section class="mt-2 lg:mt-16">
             <div class="heroContainer flex max-lg:flex-col-reverse">
                 <!-- header  -->
-                <div class="w-full lg:w-[40%]">
+                <div class="w-full lg:w-[40%] max-md:mt-12">
                     <h1 class="text-3xl sm:text-4xl md:text-5xl lg:text-[54px] font-semibold w-full lg:max-w-[487px]">Develop Your Life With <span class="text-mainColor">One Step.</span></h1>
                     <p class="text-base sm::text-lg md:text-[21px] text-textColor max-w-[509px] w-full">Pushing the possibilities of the internet. Good for
                         the last software. <span class="font-bold">Make it A software night.</span></p>
                         <!-- input  -->
                         <form action="">
                             <div class="mt-[30px] max-w-[432px]  shadow-2xl flex justify-between p-1 rounded-b-lg">
-                                <input type="text" placeholder="Enter your email" class="placeholder:text-lg indent-6">
-                                <button class="text-[21px] py-[11px] px-[33px] bg-btnColor text-white rounded-md">Send</button>
+                                <input type="text" placeholder="Enter your email" class="placeholder:text-xs placeholder:lg:text-lg indent-2.5 sm:indent-6">
+                                <button class="text-sm mg:text-[21px] py-[11px] px-7 sm:px-[33px] bg-btnColor text-white rounded-md">Send</button>
                             </div>
                         </form>
                         <!-- brands logo  -->
-                        <div class="flex items-center gap-8 mt-8">
-                            <img src="./assets/images/gp.svg" alt="">
-                            <img src="./assets/images/as.svg" alt="">
+                        <div class="flex items-center gap-3 sm:gap-8 mt-8">
+                            <img src="./assets/images/gp.svg" alt="" class="scale-75 md:scale-100">
+                            <img src="./assets/images/as.svg" alt="" class="scale-75 md:scale-100">
                         </div>
 
                 </div>
