--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./src/style.css">
     <link rel="icon" href="./assets/images/Logo.svg">
 </head>
-<body class="min-h-[500vh]">
+<body>
     <header class="bg-white w-full sticky top-0 left-0 z-50">
         <nav class="h-[127px] headerContainer flex justify-between items-center">
             <!-- Logo  -->
@@ -53,7 +53,7 @@
                         the last software. <span class="font-bold">Make it A software night.</span></p>
                         <!-- input  -->
                         <form action="">
-                            <div class="mt-[30px] max-w-[432px]  shadow-2xl flex justify-between p-1 rounded-b-lg">
+                            <div class="mt-[30px] max-w-[432px]  shadow-xl focus-within:shadow-2xl duration-100 flex justify-between p-1 rounded-b-lg">
                                 <input type="text" placeholder="Enter your email" class="placeholder:text-xs placeholder:lg:text-lg indent-2.5 sm:indent-6">
                                 <button class="text-sm mg:text-[21px] py-[11px] px-7 sm:px-[33px] bg-btnColor text-white rounded-md">Send</button>
                             </div>
@@ -67,6 +67,119 @@
                 </div>
                 <div class="w-full lg:w-[60%] place-content-center">
                     <img src="./assets/images/heroImg.png" alt="" class="lg:-translate-y-[8%]">
+                </div>
+            </div>
+        </section>
+        <!-- brands  -->
+        <section class="mt-12 bg-mainColor">
+            <div class="headerContainer py-[50px] items-center gap-x-16 sm:gap-x-[85px] gap-y-10 grid grid-cols-2 md:grid-cols-3 lg:grid-cols-6">
+                <img src="./assets/images/Google.svg" alt="">
+                <img src="./assets/images/Avast.svg" alt="">
+                <img src="./assets/images/Ebay.svg" alt="">
+                <img src="./assets/images/paypal.svg" alt="">
+                <img src="./assets/images/HubSpot.svg" alt="">
+            </div>
+        </section>
+        <!-- solution  -->
+        <section class="mt-16 sm:mt-[110px] ">
+            <div class="contentContainer flex flex-col lg:flex-row gap-x-[74px] gap-y-10 sm:gap-y-[74px] items-center">
+                <!-- cards  -->
+                <div class="w-full lg:w-[50%] grid grid-cols-1 sm:grid-cols-2 gap-[30px]">
+                    <!-- card 1 -->
+                    <div class="border border-gray-400 rounded-2xl p-[35px] hover:border-transparent hover:shadow-lg duration-200">
+                        <div class="size-[75px] bg-[#F14C4C] flex items-center justify-center rounded-2xl shadow-2xl shadow-red-400">
+                            <img src="./assets/images/content1svg.svg" alt="" class="">
+                        </div>
+                        <p class="text-[21px] mt-[25px]">Easy Settings</p>
+                        <p class="mt-[9px]">A complete about-face in core economic amsterday bilamco progressive.</p>
+                    </div>
+                    <!-- card 2 -->
+                    <div class="border border-gray-400 rounded-2xl p-[35px] hover:border-transparent hover:shadow-lg duration-200">
+                        <div class="size-[75px] bg-[#4EDAAC] flex items-center justify-center rounded-2xl shadow-2xl shadow-[#4EDAAC]">
+                            <img src="./assets/images/content2.svg" alt="" class="">
+                        </div>
+                        <p class="text-[21px] mt-[25px]">User Friendly</p>
+                        <p class="mt-[9px]">A complete about-face in
+                            core economic amsterday bilamco progressive.</p>
+                    </div>
+                    <!-- card 3 -->
+                    <div class="border border-gray-400 rounded-2xl p-[35px] hover:border-transparent hover:shadow-lg duration-200">
+                        <div class="size-[75px] bg-[#FABC13] flex items-center justify-center rounded-2xl shadow-2xl shadow-[#FABC13]">
+                            <img src="./assets/images/content3.svg" alt="" class="">
+                        </div>
+                        <p class="text-[21px] mt-[25px]">Full secured</p>
+                        <p class="mt-[9px]">A complete about-face in
+                            core economic amsterday bilamco progressive.</p>
+                    </div>
+                    <!-- card 4 -->
+                    <div class="border border-gray-400 rounded-2xl p-[35px] hover:border-transparent hover:shadow-lg duration-200">
+                        <div class="size-[75px] bg-[#EC4EDC] flex items-center justify-center rounded-2xl shadow-2xl shadow-[#EC4EDC]">
+                            <img src="./assets/images/content3.svg" alt="" class="">
+                        </div>
+                        <p class="text-[21px] mt-[25px]">Clean Code</p>
+                        <p class="mt-[9px]">A complete about-face in
+                            core economic amsterday bilamco progressive.</p>
+                    </div>
+                </div>
+                <!-- title  -->
+                <div class="w-full lg:w-[50%]">
+                    <h2 class="lg:max-w-[548px] w-full text-3xl sm:text-4xl md:text-[45px] font-semibold leading-[60px]">A complete software solution for you.</h2>
+                    <p class="mt-5 text-lg max-w-[500px]:text-base lg:max-w-[480px] w-full">The source of powerful qorld and making future sure. Its a  straight forward software.</p>
+                    <p class="mt-4 text-lg max-w-[500px]:text-base lg:max-w-[480px] w-full">Where possibilities are made possible. We must have expand <span class="font-semibold">Possibilities of better tomorrow.</span> The directly secure of your network deliveing  services.</p>
+                    <div class="mt-7 flex items-center gap-4">
+                        <button class="text-white px-[39px] py-[14px] bg-black rounded-xl duration-100">Learn ore</button>
+                        <span><a href="#" class="text-red-500 text-lg">Ask?</a></span>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- analysis  -->
+        <section class="mt-16 sm:mt-[110px] ">
+            <div class="contentContainer flex flex-col lg:flex-row-reverse gap-x-[74px] gap-y-1 lg:gap-y-[74px] items-center">
+                <!-- img  -->
+                <div class="w-full lg:w-[50%]">
+                    <img src="./assets/images/content5.png" alt="" class="">
+                </div>
+                <!-- title  -->
+                <div class="w-full lg:w-[50%]">
+                    <h2 class="lg:max-w-[500px] w-full text-3xl sm:text-4xl md:text-[45px] font-semibold leading-[60px]">Discover & growth with analysis.</h2>
+                    <p class="mt-5 text-lg max-w-[448px]:text-base lg:max-w-[448px] w-full">Software with new dimensions. The better future 
+                        and information about the virtual world. 
+                        </p>
+                    <li class="list-none mt-5 text-base sm:text-lg">
+                        <div class="flex items-center gap-2.5">
+                            <img src="./assets/images/cheaked.svg" alt="">
+                            <span class=" leading-12">Software with new dimensions the better.</span>
+                        </div>
+                        <div class="flex items-center gap-2.5">
+                            <img src="./assets/images/cheaked.svg" alt="">
+                            <span class=" leading-12">Effortlessly manages all your information.</span>
+                        </div>
+                        <div class="flex items-center gap-2.5">
+                            <img src="./assets/images/cheaked.svg" alt="">
+                            <span class=" leading-12">Simple Solutions for Complex Connections.</span>
+                        </div>
+                        <div class="flex items-center gap-2.5">
+                            <img src="./assets/images/cheaked.svg" alt="">
+                            <span class=" leading-12">Complete business solutions for customers.</span>
+                        </div>
+                    </li>
+
+                </div>
+            </div>
+        </section>
+        <!-- security  -->
+        <section class="mt-16 sm:mt-[110px] ">
+            <div class="contentContainer flex flex-col lg:flex-row gap-x-[74px] gap-y-1 sm:gap-y-[74px] items-center">
+                <!-- img  -->
+                <div class="w-full lg:w-[50%] my-auto">
+                    <img src="./assets/images/context6.png" alt="">
+                </div>
+                <!-- title  -->
+                <div class="w-full lg:w-[50%]">
+                    <h2 class="lg:max-w-[500px] w-full text-3xl sm:text-4xl md:text-[45px] font-semibold leading-[60px]">Serving information with  security.</h2>
+                    <p class="mt-5 text-lg max-w-[500px]:text-base lg:max-w-[480px] w-full">The source of powerful qorld and making future sure. Its a  straight forward software. Paired with dynamic image of the actual tool for you.</p>
+                    <p class="mt-4 text-lg max-w-[500px]:text-base lg:max-w-[480px] w-full">Where possibilities are made possible. We must have expand <span class="font-semibold">Possibilities of better tomorrow.</span> The directly secure of your network deliveing  services.</p>
                 </div>
             </div>
         </section>
