--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SOFT POINT</title>
     <link rel="stylesheet" href="./src/style.css">
-    <link rel="icon" href="./assets/images/Logo.svg">
+    <link rel="icon" href="./assets/images/title2.png">
 </head>
 <body>
     <header class="bg-white w-full static">
