--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
             </ul>
             <!-- action  -->
             <div class="flex items-center gap-0.5">
-                <button class="py-[14px] px-4 sm:px-[29px] border border-transparent active:border-btnColor active:text-btnColor hover:text-gray-400 text-sm sm:text-lg duration-100 rounded-md">Login</button>
-                <button class="py-[14px] px-4 sm:px-[29px] border border-transparent bg-btnColor hover:border-btnColor hover:bg-white text-white hover:text-btnColor text-sm sm:text-lg duration-100 rounded-md">Sign up</button>
+                <button class="py-[14px] px-2 sm:px-[29px] border border-transparent active:border-btnColor active:text-btnColor hover:text-gray-400 text-sm sm:text-lg duration-100 rounded-md">Login</button>
+                <button class="py-[14px] px-2 sm:px-[29px] border border-transparent bg-btnColor hover:border-btnColor hover:bg-white text-white hover:text-btnColor text-sm sm:text-lg duration-100 rounded-md">Sign up</button>
             </div>
         </nav>
     </header>
@@ -52,9 +52,9 @@
                         the last software. <span class="font-bold">Make it A software night.</span></p>
                         <!-- input  -->
                         <form action="">
-                            <div class="mt-[30px] max-w-[432px] w-full flex shadow-xl focus-within:shadow-2xl duration-100 p-1 rounded-lg">
+                            <div class="mt-[30px] sm:max-w-[432px] w-full flex shadow-xl focus-within:shadow-2xl duration-100 p-1 rounded-lg">
                                 <input type="email" placeholder="Enter your email" class="placeholder:text-xs placeholder:lg:text-lg indent-2.5 sm:indent-6 flex-1">
-                                <button class="text-sm mg:text-[21px] py-[11px] px-6 sm:px-[32px] bg-btnColor border border-transparent hover:bg-white hover:border-red-500 text-white hover:text-red-500 rounded-md">Send</button>
+                                <button class="text-xs mg:text-[21px] py-[11px] px-4 sm:px-[32px] bg-btnColor border border-transparent hover:bg-white hover:border-red-500 text-white hover:text-red-500 rounded-md">Send</button>
                             </div>
                         </form>
                         <!-- brands logo  -->
