--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>SOFT POINT</title>
     <link rel="stylesheet" href="./src/style.css">
     <link rel="icon" href="./assets/images/title2.png">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
     <header class="bg-white w-full static">
@@ -64,7 +65,7 @@
                         </div>
 
                 </div>
-                <div class="w-full lg:w-[60%] place-content-center">
+                <div class="w-full lg:w-[60%] place-content-center" data-aos="zoom-in" data-aos-duration="700">
                     <img src="./assets/images/heroImg.png" alt="" class="lg:-translate-y-[8%] imageScale">
                 </div>
             </div>
@@ -85,7 +86,7 @@
                 <!-- cards  -->
                 <div class="w-full lg:w-[50%] grid grid-cols-1 sm:grid-cols-2 gap-[30px]">
                     <!-- card 1 -->
-                    <div class="border border-gray-400 rounded-2xl p-[35px] hover:border-transparent hover:shadow-lg duration-200 imageScale">
+                    <div class="border border-gray-400 rounded-2xl p-[35px] hover:border-transparent hover:shadow-lg duration-200 imageScale" data-aos="zoom-in-up" data-aos-duration="700">
                         <div class="size-[75px] bg-[#F14C4C] flex items-center justify-center rounded-2xl shadow-2xl shadow-red-400">
                             <img src="./assets/images/content1svg.svg" alt="" class="">
                         </div>
@@ -93,7 +94,7 @@
                         <p class="mt-[9px]">A complete about-face in core economic amsterday bilamco progressive.</p>
                     </div>
                     <!-- card 2 -->
-                    <div class="border border-gray-400 rounded-2xl p-[35px] hover:border-transparent hover:shadow-lg duration-200 imageScale">
+                    <div class="border border-gray-400 rounded-2xl p-[35px] hover:border-transparent hover:shadow-lg duration-200 imageScale" data-aos="zoom-in-up" data-aos-duration="700">
                         <div class="size-[75px] bg-[#4EDAAC] flex items-center justify-center rounded-2xl shadow-2xl shadow-[#4EDAAC]">
                             <img src="./assets/images/content2.svg" alt="" class="">
                         </div>
@@ -102,7 +103,7 @@
                             core economic amsterday bilamco progressive.</p>
                     </div>
                     <!-- card 3 -->
-                    <div class="border border-gray-400 rounded-2xl p-[35px] hover:border-transparent hover:shadow-lg duration-200 imageScale">
+                    <div class="border border-gray-400 rounded-2xl p-[35px] hover:border-transparent hover:shadow-lg duration-200 imageScale" data-aos="zoom-in-up" data-aos-duration="700">
                         <div class="size-[75px] bg-[#FABC13] flex items-center justify-center rounded-2xl shadow-2xl shadow-[#FABC13]">
                             <img src="./assets/images/content3.svg" alt="" class="">
                         </div>
@@ -111,7 +112,7 @@
                             core economic amsterday bilamco progressive.</p>
                     </div>
                     <!-- card 4 -->
-                    <div class="border border-gray-400 rounded-2xl p-[35px] hover:border-transparent hover:shadow-lg duration-200 imageScale">
+                    <div class="border border-gray-400 rounded-2xl p-[35px] hover:border-transparent hover:shadow-lg duration-200 imageScale" data-aos="zoom-in-up" data-aos-duration="700">
                         <div class="size-[75px] bg-[#EC4EDC] flex items-center justify-center rounded-2xl shadow-2xl shadow-[#EC4EDC]">
                             <img src="./assets/images/content3.svg" alt="" class="">
                         </div>
@@ -136,7 +137,7 @@
         <section class="mt-16 sm:mt-[110px] ">
             <div class="contentContainer flex flex-col lg:flex-row-reverse gap-x-[74px] gap-y-1 lg:gap-y-[74px] items-center">
                 <!-- img  -->
-                <div class="w-full lg:w-[50%]">
+                <div class="w-full lg:w-[50%]" data-aos="zoom-in-up" data-aos-duration="1000">
                     <img src="./assets/images/content5.png" alt="" class="imageScale">
                 </div>
                 <!-- title  -->
@@ -171,7 +172,7 @@
         <section class="mt-16 sm:mt-[110px] ">
             <div class="contentContainer flex flex-col lg:flex-row gap-x-[74px] gap-y-1 sm:gap-y-[74px] items-center">
                 <!-- img  -->
-                <div class="w-full lg:w-[50%] my-auto">
+                <div class="w-full lg:w-[50%] my-auto" data-aos="zoom-in-up" data-aos-duration="1000">
                     <img src="./assets/images/context6.png" alt="" class="imageScale">
                 </div>
                 <!-- title  -->
@@ -182,11 +183,11 @@
                 </div>
             </div>
         </section>
-        <!-- security  -->
+        <!-- software  -->
         <section id="download" class="mt-16 py-8 sm:py-16 md:py-[91px] sm:mt-[110px] bg-mainColor">
             <div class="contentContainer flex flex-col lg:flex-row-reverse gap-x-[74px] gap-y-12 sm:gap-y-[74px] items-center">
                 <!-- img  -->
-                <div class="w-full lg:w-[50%] my-auto lg:relative">
+                <div class="w-full lg:w-[50%] my-auto lg:relative" data-aos="zoom-in-up" data-aos-duration="1000">
                     <img src="./assets/images/software1.png" alt="" class="duration-150 imageScale lg:absolute mx-auto lg:-translate-y-[60%] md:scale-110">
                 </div>
                 <!-- title  -->
@@ -238,5 +239,11 @@
             </ul>
         </div>
     </footer>
+
+    <!-- js  -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 </html>
