--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <!-- cards  -->
                 <div class="w-full lg:w-[50%] grid grid-cols-1 sm:grid-cols-2 gap-[30px]">
                     <!-- card 1 -->
-                    <div class="border border-gray-400 rounded-2xl p-[35px] hover:border-transparent hover:shadow-lg duration-200 imageScale" data-aos="zoom-in-up" data-aos-duration="700">
+                    <div class="border border-gray-400 rounded-2xl p-[35px] hover:border-transparent hover:shadow-lg duration-200 imageScale">
                         <div class="size-[75px] bg-[#F14C4C] flex items-center justify-center rounded-2xl shadow-2xl shadow-red-400">
                             <img src="./assets/images/content1svg.svg" alt="" class="">
                         </div>
@@ -94,7 +94,7 @@
                         <p class="mt-[9px]">A complete about-face in core economic amsterday bilamco progressive.</p>
                     </div>
                     <!-- card 2 -->
-                    <div class="border border-gray-400 rounded-2xl p-[35px] hover:border-transparent hover:shadow-lg duration-200 imageScale" data-aos="zoom-in-up" data-aos-duration="700">
+                    <div class="border border-gray-400 rounded-2xl p-[35px] hover:border-transparent hover:shadow-lg duration-200 imageScale">
                         <div class="size-[75px] bg-[#4EDAAC] flex items-center justify-center rounded-2xl shadow-2xl shadow-[#4EDAAC]">
                             <img src="./assets/images/content2.svg" alt="" class="">
                         </div>
@@ -103,7 +103,7 @@
                             core economic amsterday bilamco progressive.</p>
                     </div>
                     <!-- card 3 -->
-                    <div class="border border-gray-400 rounded-2xl p-[35px] hover:border-transparent hover:shadow-lg duration-200 imageScale" data-aos="zoom-in-up" data-aos-duration="700">
+                    <div class="border border-gray-400 rounded-2xl p-[35px] hover:border-transparent hover:shadow-lg duration-200 imageScale">
                         <div class="size-[75px] bg-[#FABC13] flex items-center justify-center rounded-2xl shadow-2xl shadow-[#FABC13]">
                             <img src="./assets/images/content3.svg" alt="" class="">
                         </div>
@@ -112,7 +112,7 @@
                             core economic amsterday bilamco progressive.</p>
                     </div>
                     <!-- card 4 -->
-                    <div class="border border-gray-400 rounded-2xl p-[35px] hover:border-transparent hover:shadow-lg duration-200 imageScale" data-aos="zoom-in-up" data-aos-duration="700">
+                    <div class="border border-gray-400 rounded-2xl p-[35px] hover:border-transparent hover:shadow-lg duration-200 imageScale">
                         <div class="size-[75px] bg-[#EC4EDC] flex items-center justify-center rounded-2xl shadow-2xl shadow-[#EC4EDC]">
                             <img src="./assets/images/content3.svg" alt="" class="">
                         </div>
